// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONEditor renders 1`] = `<ul class="tree-container json-editor-container" style="list-style: none; margin: 0px;"></ul>`;

exports[`JSONEditor renders with custom typeColors 1`] = `
<ul class="tree-container json-editor-container" style="list-style: none; margin: 0px;">
  <li>
    <div>
      <span style="">bar: </span>
      <span style="color: rgb(28, 0, 207);" title="Click to Edit" class="json-editor-value">
        <span style="white-space: pre;">1</span>
      </span>
    </div>
  </li>
  <li>
    <div>
      <span style="">baz: </span>
      <span style="color: rgb(170, 13, 145);" title="Click to Edit" class="json-editor-value">
        <span style="white-space: pre;">true</span>
      </span>
    </div>
  </li>
  <li>
    <div>
      <span style="">foo: </span>
      <span style="color: rgb(196, 26, 22);" title="Click to Edit" class="json-editor-value">
        <span style="white-space: pre;">bar</span>
      </span>
    </div>
  </li>
</ul>
`;

exports[`JSONEditor renders with custom typeColors 2`] = `
<ul class="tree-container json-editor-container" style="list-style: none; margin: 0px;">
  <li>
    <div>
      <span style="">bar: </span>
      <span style="color: rgb(17, 17, 17);" title="Click to Edit" class="json-editor-value">
        <span style="white-space: pre;">1</span>
      </span>
    </div>
  </li>
  <li>
    <div>
      <span style="">baz: </span>
      <span style="color: rgb(0, 0, 0);" title="Click to Edit" class="json-editor-value">
        <span style="white-space: pre;">true</span>
      </span>
    </div>
  </li>
  <li>
    <div>
      <span style="">foo: </span>
      <span style="color: rgb(34, 34, 34);" title="Click to Edit" class="json-editor-value">
        <span style="white-space: pre;">bar</span>
      </span>
    </div>
  </li>
</ul>
`;

exports[`JSONEditor should call onChange 1`] = `
Array [
  Array [
    Object {
      "foo": "baz",
    },
  ],
]
`;

exports[`JSONEditor should set and remove expanded value from "expandedNodes" 1`] = `true`;

exports[`JSONEditor should set and remove expanded value from "expandedNodes" 2`] = `false`;
